test du approot

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body class="color-theme-blue mont-font">
-    <!--<div class="preloader"></div>-->
+    <div class="preloader"></div>
     <div class="main-wrapper">
             <nav class="navigation scroll-bar">
                     <div class="container pl-0 pr-0">
@@ -207,6 +207,7 @@
               <li><a href="#" class="menu-search-icon"><i class="feather-search text-grey-900 font-lg"></i></a></li>
           </ul>
     </div>
+        <h1>Avant de m'envoyer toute la merde du monde, vérifie</h1>
         <app-root></app-root>
     <div class="app-footer border-0 shadow-lg">
         <a href="default.html" class="nav-content-bttn nav-center"><i class="feather-home"></i></a>
