--- a/src/index.html
+++ b/src/index.html
@@ -16,219 +16,13 @@
 <body class="color-theme-blue mont-font">
     <div class="preloader"></div>
     <div class="main-wrapper">
-            <nav class="navigation scroll-bar">
-                    <div class="container pl-0 pr-0">
-                        <div class="nav-content">
-                            <div class="nav-top">
-                                <a href="index.html"><i class="feather-slack text-success display1-size mr-3 ml-3"></i><span class="d-inline-block fredoka-font ls-3 fw-600 text-current font-xl logo-text mb-0">Elomoas. </span> </a>
-                                <a href="#" class="close-nav d-inline-block d-lg-none"><i class="ti-close bg-grey mb-4 btn-round-sm font-xssss fw-700 text-dark ml-auto mr-2 "></i></a>
-                            </div>
-                            <div class="nav-caption fw-600 font-xssss text-grey-500"><span>New </span>Feeds</div>
-                            <ul class="mb-3">
-                                <li class="logo d-none d-xl-block d-lg-block"></li>
-                                <li><a href="default.html" class=" nav-content-bttn open-font" data-tab="chats"><i class="feather-tv mr-3"></i><span>Course Feed</span></a></li>
-                                <li><a href="default-follower.html" class="nav-content-bttn open-font" data-tab="friends"><i class="feather-shopping-bag mr-3"></i><span>Followers</span></a></li>
-                                <li><a href="default-channel.html" class="nav-content-bttn open-font" data-tab="favorites"><i class="feather-globe mr-3"></i><span>Explore Channel</span></a></li>
-                                <li><a href="default-live-stream.html" class="nav-content-bttn open-font" data-tab="favorites"><i class="feather-play-circle mr-3"></i><span>Live Stream</span></a></li>
-                                <li class="flex-lg-brackets"><a href="default-user-profile.html" data-tab="archived" class="active nav-content-bttn open-font"><i class="feather-video mr-3"></i><span>Saved Course</span></a></li>                        
-                            </ul>
-        
-                            <div class="nav-caption fw-600 font-xssss text-grey-500"><span>Following </span>Author</div>
-                            <ul class="mb-3">
-                                <li><a href="default-author-profile.html" class="nav-content-bttn open-font pl-2 pb-2 pt-1 h-auto" data-tab="chats"><img src="images/profile-4.png" alt="user" class="w40 mr-2"><span>Surfiya Zakir </span> <span class="circle-icon bg-success mt-3"></span></a></li>
-                                <li><a href="default-author-profile.html" class="nav-content-bttn open-font pl-2 pb-2 pt-1 h-auto" data-tab="chats"><img src="images/profile-2.png" alt="user" class="w40 mr-2"><span>Vincent Parks </span> <span class="circle-icon bg-warning mt-3"></span></a></li>
-                                <li><a href="default-author-profile.html" class="nav-content-bttn open-font pl-2 pb-2 pt-1 h-auto" data-tab="chats"><img src="images/profile-3.png" alt="user" class="w40 mr-2"><span>Richard Bowers </span> <span class="circle-icon bg-success mt-3"></span></a></li>
-                                <li><a href="default-author-profile.html" class="nav-content-bttn open-font pl-2 pb-2 pt-1 h-auto" data-tab="chats"><img src="images/profile-4.png" alt="user" class="w40 mr-2"><span>John Lambert </span> <span class="circle-icon bg-success mt-3"></span></a></li>
-                            </ul>
-                            <div class="nav-caption fw-600 font-xssss text-grey-500"><span></span> Account</div>
-                            <ul class="mb-3">
-                                <li class="logo d-none d-xl-block d-lg-block"></li>
-                                <li><a href="default-settings.html" class="nav-content-bttn open-font h-auto pt-2 pb-2"><i class="font-sm feather-settings mr-3 text-grey-500"></i><span>Settings</span></a></li>
-                                <li><a href="default-analytics.html" class="nav-content-bttn open-font h-auto pt-2 pb-2"><i class="font-sm feather-pie-chart mr-3 text-grey-500"></i><span>Analytics</span></a></li>
-                                <li><a href="message.html" class="nav-content-bttn open-font h-auto pt-2 pb-2"><i class="font-sm feather-message-square mr-3 text-grey-500"></i><span>Chat</span><span class="circle-count bg-warning mt-0">23</span></a></li>
-                                
-                            </ul>
-                        </div>
-                    </div>
-            </nav>
-      <div class="main-content">
-    <div class="middle-sidebar-header bg-white">
-          <button class="header-menu"></button>
-          <form action="#" class="float-left header-search">
-              <div class="form-group mb-0 icon-input">
-                  <i class="feather-search font-lg text-grey-400"></i>
-                  <input type="text" placeholder="Start typing to search.." class="bg-transparent border-0 lh-32 pt-2 pb-2 pl-5 pr-3 font-xsss fw-500 rounded-xl w350">
-              </div>
-          </form>
-          <ul class="d-flex ml-auto right-menu-icon">
-              <li>
-                  <a href="#"><span class="dot-count bg-warning"></span><i class="feather-bell font-xl text-current"></i>
-                      <div class="menu-dropdown">
-                          <h4 class="fw-700 font-xs mb-4">Notification</h4>
-                          <div class="card bg-transparent-card w-100 border-0 pl-5 mb-3">
-                              <img src="images/user-8.png" alt="user" class="w40 position-absolute left-0">
-                              <h5 class="font-xsss text-grey-900 mb-1 mt-0 fw-700 d-block">Hendrix Stamp <span class="text-grey-400 font-xsssss fw-600 float-right mt-1"> 3 min</span></h5>
-                              <h6 class="text-grey-500 fw-500 font-xssss lh-4">There are many variations of pass..</h6>
-                          </div>
-                          <div class="card bg-transparent-card w-100 border-0 pl-5 mb-3">
-                              <img src="images/user-4.png" alt="user" class="w40 position-absolute left-0">
-                              <h5 class="font-xsss text-grey-900 mb-1 mt-0 fw-700 d-block">Goria Coast <span class="text-grey-400 font-xsssss fw-600 float-right mt-1"> 2 min</span></h5>
-                              <h6 class="text-grey-500 fw-500 font-xssss lh-4">Mobile Apps UI Designer is require..</h6>
-                          </div>
-
-                          <div class="card bg-transparent-card w-100 border-0 pl-5 mb-3">
-                              <img src="images/user-7.png" alt="user" class="w40 position-absolute left-0">
-                              <h5 class="font-xsss text-grey-900 mb-1 mt-0 fw-700 d-block">Surfiya Zakir <span class="text-grey-400 font-xsssss fw-600 float-right mt-1"> 1 min</span></h5>
-                              <h6 class="text-grey-500 fw-500 font-xssss lh-4">Mobile Apps UI Designer is require..</h6>
-                          </div>
-                          <div class="card bg-transparent-card w-100 border-0 pl-5">
-                              <img src="images/user-6.png" alt="user" class="w40 position-absolute left-0">
-                              <h5 class="font-xsss text-grey-900 mb-1 mt-0 fw-700 d-block">Victor Exrixon <span class="text-grey-400 font-xsssss fw-600 float-right mt-1"> 30 sec</span></h5>
-                              <h6 class="text-grey-500 fw-500 font-xssss lh-4">Mobile Apps UI Designer is require..</h6>
-                          </div>
-                      </div>
-                  </a>
-              </li>
-              <li><a href="message.html"><i class="feather-message-square font-xl text-current"></i></a></li>
-              <li>
-                  <a href="#"><i class="feather-settings animation-spin d-inline-block font-xl text-current"></i>
-                      <div class="menu-dropdown switchcolor-wrap">
-                          <h4 class="fw-700 font-xs mb-4">Settings</h4>
-                           <h6 class="font-xssss text-grey-500 fw-700 mb-3 d-block">Choose Color Theme</h6>
-                          <ul>
-                              <li class="ml-0">
-                                  <label class="item-radio item-content">
-                                      <input type="radio" name="color-radio" value="red" checked=""><i class="ti-check"></i>
-                                      <span class="circle-color bg-red" style="background-color: #ff3b30;"></span>
-                                  </label>
-                              </li>
-                              <li class="ml-0">
-                                  <label class="item-radio item-content">
-                                      <input type="radio" name="color-radio" value="green"><i class="ti-check"></i>
-                                      <span class="circle-color bg-green" style="background-color: #4cd964;"></span>
-                                  </label>
-                              </li>
-                              <li class="ml-0">
-                                  <label class="item-radio item-content">
-                                      <input type="radio" name="color-radio" value="blue" checked=""><i class="ti-check"></i>
-                                      <span class="circle-color bg-blue" style="background-color: #132977;"></span>
-                                  </label>
-                              </li>
-                              <li class="ml-0">
-                                  <label class="item-radio item-content">
-                                      <input type="radio" name="color-radio" value="pink"><i class="ti-check"></i>
-                                      <span class="circle-color bg-pink" style="background-color: #ff2d55;"></span>
-                                  </label>
-                              </li>
-                              <li class="ml-0">
-                                  <label class="item-radio item-content">
-                                      <input type="radio" name="color-radio" value="yellow"><i class="ti-check"></i>
-                                      <span class="circle-color bg-yellow" style="background-color: #ffcc00;"></span>
-                                  </label>
-                              </li>
-                              <li class="ml-0">
-                                  <label class="item-radio item-content">
-                                      <input type="radio" name="color-radio" value="orange"><i class="ti-check"></i>
-                                      <span class="circle-color bg-orange" style="background-color: #ff9500;"></span>
-                                  </label>
-                              </li>
-                              <li class="ml-0">
-                                  <label class="item-radio item-content">
-                                      <input type="radio" name="color-radio" value="gray"><i class="ti-check"></i>
-                                      <span class="circle-color bg-gray" style="background-color: #8e8e93;"></span>
-                                  </label>
-                              </li>
-
-                              <li class="ml-0">
-                                  <label class="item-radio item-content">
-                                      <input type="radio" name="color-radio" value="brown"><i class="ti-check"></i>
-                                      <span class="circle-color bg-brown" style="background-color: #D2691E;"></span>
-                                  </label>
-                              </li>
-                              <li class="ml-0">
-                                  <label class="item-radio item-content">
-                                      <input type="radio" name="color-radio" value="darkgreen"><i class="ti-check"></i>
-                                      <span class="circle-color bg-darkgreen" style="background-color: #228B22;"></span>
-                                  </label>
-                              </li>
-                              <li class="ml-0">
-                                  <label class="item-radio item-content">
-                                      <input type="radio" name="color-radio" value="deeppink"><i class="ti-check"></i>
-                                      <span class="circle-color bg-deeppink" style="background-color: #FFC0CB;"></span>
-                                  </label>
-                              </li>
-                              <li class="ml-0">
-                                  <label class="item-radio item-content">
-                                      <input type="radio" name="color-radio" value="cadetblue"><i class="ti-check"></i>
-                                      <span class="circle-color bg-cadetblue" style="background-color: #5f9ea0;"></span>
-                                  </label>
-                              </li>
-                              <li class="ml-0 d-inline-block">
-                                  <label class="item-radio item-content">
-                                      <input type="radio" name="color-radio" value="darkorchid"><i class="ti-check"></i>
-                                      <span class="circle-color bg-darkorchid" style="background-color: #9932cc;"></span>
-                                  </label>
-                              </li>
-                          </ul>
-                          <div class="card bg-transparent-card border-0 d-block mt-3">
-                              <h4 class="d-inline font-xssss mont-font fw-700">Header Background</h4>
-                              <div class="d-inline float-right mt-1">
-                                  <label class="toggle toggle-menu-color"><input type="checkbox"><span class="toggle-icon"></span></label>
-                              </div>
-                          </div>
-                          <div class="card bg-transparent-card border-0 d-block mt-3">
-                              <h4 class="d-inline font-xssss mont-font fw-700">Sticky Header</h4>
-                              <div class="d-inline float-right mt-1">
-                                  <label class="toggle toggle-sticky"><input type="checkbox"><span class="toggle-icon"></span></label>
-                              </div>
-                          </div>
-                          <div class="card bg-transparent-card border-0 d-block mt-3">
-                              <h4 class="d-inline font-xssss mont-font fw-700">Full Screen</h4>
-                              <div class="d-inline float-right mt-1">
-                                  <label class="toggle toggle-screen"><input type="checkbox"><span class="toggle-icon"></span></label>
-                              </div>
-                          </div>
-                          <div class="card bg-transparent-card border-0 d-block mt-3">
-                              <h4 class="d-inline font-xssss mont-font fw-700">Menu Position</h4>
-                              <div class="d-inline float-right mt-1">
-                                  <label class="toggle toggle-menu"><input type="checkbox"><span class="toggle-icon"></span></label>
-                              </div>
-                          </div>
-                          <div class="card bg-transparent-card border-0 d-block mt-3">
-                              <h4 class="d-inline font-xssss mont-font fw-700">Dark Mode</h4>
-                              <div class="d-inline float-right mt-1">
-                                  <label class="toggle toggle-dark"><input type="checkbox"><span class="toggle-icon"></span></label>
-                              </div>
-                          </div>
-                      </div>
-                  </a>
-              </li>
-              <li><a href="default-user-profile.html"><img src="./assets/images/female-profile.png" alt="user" class="w40 mt--1"></a></li>
-              <li><a href="#" class="menu-search-icon"><i class="feather-search text-grey-900 font-lg"></i></a></li>
-          </ul>
-    </div>
+        <app-navigation></app-navigation>
+    <div class="main-content">
+        <app-middle-sidebar-header></app-middle-sidebar-header>
         <app-root></app-root>
-    <div class="app-footer border-0 shadow-lg">
-        <a href="default.html" class="nav-content-bttn nav-center"><i class="feather-home"></i></a>
-        <a href="default-follower.html" class="nav-content-bttn"><i class="feather-package"></i></a>
-        <a href="default-live-stream.html" class="nav-content-bttn" data-tab="chats"><i class="feather-layout"></i></a>            
-        <a href="#" class="nav-content-bttn sidebar-layer"><i class="feather-layers"></i></a>
-        <a href="default-settings.html" class="nav-content-bttn"><img src="./assets/images/female-profile.png" alt="user" class="w30 shadow-xss"></a>
+        <app-footer></app-footer>
+        <app-header-search></app-header-search>
     </div>
-    <div class="app-header-search">
-        <form class="search-form">
-            <div class="form-group searchbox mb-0 border-0 p-1">
-                <input type="text" class="form-control border-0" placeholder="Search...">
-                <i class="input-icon">
-                    <ion-icon name="search-outline" role="img" class="md hydrated" aria-label="search outline"></ion-icon>
-                </i>
-                <a href="#" class="ml-1 mt-1 d-inline-block close searchbox-close">
-                    <i class="ti-close font-xs"></i>
-                </a>
-            </div>
-        </form>
-    </div>
-  </div>
     <script src="./assets/js/plugin.js"></script>
     <script src="./assets/js/apexcharts.min.js"></script> 
     <script src="./assets/js/chart.js"></script> 
