script génération de données

--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,13 @@
     <div class="preloader"></div>
     <div class="main-wrapper">
         <app-navigation></app-navigation>
-    <div class="main-content">
-        <app-middle-sidebar-header></app-middle-sidebar-header>
-        <app-root></app-root>
-        <app-footer></app-footer>
-        <app-header-search></app-header-search>
+        <div class="main-content">
+            <app-middle-sidebar-header></app-middle-sidebar-header>
+            <app-default-user-profile></app-default-user-profile>
+            <app-root></app-root>
+        </div>
+            <app-footer></app-footer>
+            <app-header-search></app-header-search>
     </div>
     <script src="./assets/js/plugin.js"></script>
     <script src="./assets/js/apexcharts.min.js"></script> 
